<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundb">

    <View
        android:id="@+id/view2"
        android:layout_width="202.5dp"
        android:layout_height="132dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"


        android:fontFamily="@font/roboto_black"
        android:lineSpacingExtra="24sp"
        android:text="@string/see_it_eat_it"
        android:textAlignment="center"
        android:textColor="#EFECEC"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.874"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <View
        android:id="@+id/view"
        android:layout_width="7.5dp"
        android:layout_height="7dp"
        android:layout_marginTop="42dp"
        android:width="7dp"
        android:height="7.5dp"
        android:background="@drawable/shapeoval"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2"
        app:layout_constraintVertical_bias="0.292" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="80dp"
        android:fontFamily="@font/roboto_black"
        android:lineSpacingExtra="24sp"
        android:text="@string/eat_it"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.217"
        app:layout_constraintStart_toEndOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="62dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="62dp"
        android:background="@drawable/round_bg3"
        android:drawableStart="@drawable/facebook_signin_btn"
        android:fontFamily="@font/roboto_black"
        android:text="@string/login_facebook"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="62dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="62dp"
        android:background="@drawable/round_bg4"
        android:drawableStart="@drawable/ic_email"
        android:fontFamily="@font/roboto_black"
        android:text="@string/logincorreo"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />


</androidx.constraintlayout.widget.ConstraintLayout>